Add video in blog

--- a/code/templates/blog-single.html
+++ b/code/templates/blog-single.html
@@ -23,7 +23,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>kb</span>Doc</h4>
+                    <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
             <h2 class="head">Did You Know?</h2>
