--- a/code/templates/blog.html
+++ b/code/templates/blog.html
@@ -23,7 +23,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>kb</span>Doc</h4>
+                    <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
             <h2 class="head">Did You Know?</h2>
@@ -34,8 +34,8 @@
     <div class="body_wrapper">
         <nav class="navbar navbar-expand-lg menu_one" id="sticky">
             <div class="container">
-                <a class="navbar-brand sticky_logo" href="index.html">
-                    <img src="../static/img/logo.png" srcset="../static/img/logo-2x.png 2x" alt="logo">
+                <a class="navbar-brand sticky_logo" href="/index">
+                    <img src="../static/img/logo.png" srcset="../static/img/logo-w.png 2x" alt="logo">
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="menu_toggle">
@@ -57,7 +57,7 @@
                             <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu">
-                               <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                               <li class="nav-item"><a href="/index" class="nav-link">Home</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown submenu mega_menu tab-demo">
@@ -182,30 +182,30 @@
         </section>
         <section class="blog_top_post_area sec_pad bg_color">
             <div class="container">
-                <div class="row blog_top_post flex-row-reverse">
-                    <div class="col-lg-7 p_top_img">
-                        <img class="p_img" src="../static/img/blog-grid/top_post.jpg" alt="">
-                    </div>
+                <div class="row blog_top_post">
                     <div class="col-lg-5 p-0">
                         <div class="b_top_post_content">
                             <div class="post_tag">
                                 <a href="#">9 Min Read</a>
                                 <a class="c_blue" href="Aboutus.html">Official</a>
                             </div>
-                            <a href="blog-single.html">
-                                <h3>10 WordPress Security Issues And How to Fix Them</h3>
-                            </a>
-                            <p>Tinkety tonk old fruit bodge on your bike mate car boot my good sir jolly good such a fibber up the kyver golly gosh David, naff chap.!</p>
-                            <a href="blog-single.html" class="learn_btn">Continue Reading<i class="arrow_right"></i></a>
+                            <h3>Women in Private Security</h3>
+                            <p>Hear some women working for ICoCA Member and Affiliate companies as they reflect on the challenges they face working in the private security industry, as well as the opportunities that lie ahead.</p>
+                            <a href="https://www.youtube.com/watch?v=5mjEDbpNmec" class="learn_btn" target="_blank">Continue Watching<i class="arrow_right"></i></a>
                             <div class="media post_author">
                                 <div class="round_img">
                                     <img src="../static/img/blog-grid/ansley.jpg" alt="">
                                 </div>
                                 <div class="media-body author_text">
-                                    <h4>Jason Response</h4>
-                                    <div class="date">Sep 14, 2020</div>
+                                    <h4>ICoCA</h4>
+                                    <div class="date">March 7, 2023</div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-7 p_top_img">
+                        <div class="video-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                            <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/5mjEDbpNmec" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
