--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -653,27 +653,7 @@
 
                         <div class="community-posts-wrapper bb-radius" id="post-list">
                             <div class="community-post style-two HerBlossom richard bug">
-                                <div class="post-content">
-                                    <div class="author-avatar">
-                                        <img src="../static/img/home_support/cp2.jpg" alt="community post">
-                                    </div>
-                                    <div class="entry-content">
-                                        <h3 class="post-title">
-                                            <a href="/forum-single1">Are there any scandal-free sanitary pad brands left?</a>
-                                        </h3>
-                                        <ul class="meta">
-                                            <li><img src="../static/img/home_support/cmm1.png" alt="cmm"><a href="#">WordPress
-                                                    Theme</a></li>
-                                            <li><i class="icon_calendar"></i>updated 3 days ago</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="post-meta-wrapper">
-                                    <ul class="post-meta-info">
-                                        <li><a href="#"><i class="icon_chat_alt"></i>20</a></li>
-                                        <li><a href="#"><i class="icon_star"></i>5</a></li>
-                                    </ul>
-                                </div>
+
                             </div>
                             <!-- /.community-post -->
                         </div>
@@ -914,7 +894,7 @@
                                 </div>
                                 <div class="entry-content">
                                     <h3 class="post-title">
-                                        <a href="/forum-single1">${post.title}</a>
+                                        <a href="/forum-single?post_id=${post.post_id}">${post.title}</a>
                                     </h3>
                                     <ul class="meta">
                                         <li><img src="../static/img/home_support/cmm1.png" alt="cmm" style="width: 30%; height: 30%;">
@@ -1003,8 +983,8 @@
                                         </div>
                                         <div class="entry-content">
                                             <h3 class="post-title">
-                                                <a href="forum-single.html">${post.title} Workspace/Org Administration</a>
-                                            </h3>
+                                                <a href="/forum-single?post_id=${post.post_id}">${post.title}</a>
+ </h3>
                                             <ul class="meta">
                                                 <li><img src="../static/img/home_support/cmm1.png" alt="cmm"><a href="#">WordPress
                                                         Theme</a></li>
