fix the format of about us

--- a/code/static/css_new/aboutus.css
+++ b/code/static/css_new/aboutus.css
@@ -44,7 +44,7 @@ h1::after {
 
 
 
-.communities-boxes .kbDoc-com-box .icon-container img {
+.communities-boxes .HerBlossom-com-box .icon-container img {
   max-width: 100%;
   height: auto;
 }
