change the upperbar of main page

--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -23,7 +23,7 @@
     <!--    user change their information css-->
 <!--    <link rel="stylesheet" href="../static/css/style1.css">-->
     <link rel="stylesheet" href="../static/css_new/account.css">
-    <title>HerBlossom</title>
+    <title>Account</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true" class="doc">
